examples/test/testpolicy16164.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16164
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key41: value30
      key34: value19
      key31: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value47
          key48: value46
          key33: value3
